// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PromptGlobalTemplateField rendering tests PromptGlobalTemplateField - isUsed false - tests 1`] = `
<div>
  <div
    class="flex items-center justify-between rounded-lg border px-4 py-3 border-orange-200 bg-orange-50"
    data-testid="prompt-global-template-field"
  >
    <div
      class="flex items-center gap-3"
    >
      <div>
        <span
          class="text-sm font-medium text-slate-900"
        >
          label 1
        </span>
        <code
          class="ml-2 font-mono text-xs text-slate-500"
        >
          {{name-1}}
        </code>
      </div>
      <span
        class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs"
        data-slot="badge"
      >
        NUMBER
      </span>
      <span
        class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground text-xs"
        data-slot="badge"
      >
        Pflicht
      </span>
      <span
        class="flex items-center gap-1 rounded-full bg-orange-100 px-2 py-1 text-xs text-orange-800"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-alert h-3 w-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
        Nicht verwendet
      </span>
    </div>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
      data-slot="button"
      data-testid="remove-global-field-btn"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-trash2 lucide-trash-2 h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 11v6"
        />
        <path
          d="M14 11v6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
        />
        <path
          d="M3 6h18"
        />
        <path
          d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`PromptGlobalTemplateField rendering tests PromptGlobalTemplateField - isUsed true - tests 1`] = `
<div>
  <div
    class="flex items-center justify-between rounded-lg border px-4 py-3 border-green-200 bg-green-50"
    data-testid="prompt-global-template-field"
  >
    <div
      class="flex items-center gap-3"
    >
      <div>
        <span
          class="text-sm font-medium text-slate-900"
        >
          label 1
        </span>
        <code
          class="ml-2 font-mono text-xs text-slate-500"
        >
          {{name-1}}
        </code>
      </div>
      <span
        class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-secondary text-secondary-foreground [a&]:hover:bg-secondary/90 text-xs"
        data-slot="badge"
      >
        NUMBER
      </span>
      <span
        class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden text-foreground [a&]:hover:bg-accent [a&]:hover:text-accent-foreground text-xs"
        data-slot="badge"
      >
        Pflicht
      </span>
      <span
        class="flex items-center gap-1 rounded-full bg-green-100 px-2 py-1 text-xs text-green-800"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-check h-3 w-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="m9 12 2 2 4-4"
          />
        </svg>
        Im Content verwendet
      </span>
    </div>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
      data-slot="button"
      data-testid="remove-global-field-btn"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-trash2 lucide-trash-2 h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 11v6"
        />
        <path
          d="M14 11v6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
        />
        <path
          d="M3 6h18"
        />
        <path
          d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
      </svg>
    </button>
  </div>
</div>
`;
